--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -4,7 +4,7 @@ jwtSecret=secret
 jwtExpiration=86400
 
 
-server.port=8081
+server.port=8099
 
 
 spring.batch.initialize-schema=always
@@ -12,12 +12,12 @@ spring.batch.initialize-schema=always
 ##Using MySQL database
 spring.datasource.url=jdbc:mysql://localhost/authdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mysql
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
