--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,36 +1,21 @@
 ### STAGE 1: Build ###
 
-FROM node:8.11.1-alpine as builder
+FROM node:12.2.0 as node
 
-# Preparing working environment.
-RUN mkdir -p /usr/src/client
-WORKDIR /usr/src/client
+WORKDIR /usr/src/app
 
-# Installing dependencies.
-COPY package*.json /usr/src/client/
+COPY package*.json ./
+
 RUN npm install
 
-# Copy openhome-panel source into image.
-COPY . /usr/src/client
+COPY . .
 
-# Building app.
-RUN npm run-script build
+RUN npm run build
 
-### STAGE 2: Setup ###
 
 FROM nginx:1.13.12-alpine
 
-# Removing nginx default page.
-RUN rm -rf /usr/share/nginx/html/*
 
-# Copying nginx configuration.
-COPY /nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=node /usr/src/app/dist/client /usr/share/nginx/html
 
-# Copying openhome-panel source into web server root.
-COPY --from=builder /usr/src/client/public /usr/share/nginx/html
-
-# Exposing ports.
-EXPOSE 8081
-
-# Starting server.
-CMD ["nginx", "-g", "daemon off;"]
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
