--- a/client/k8s-service.yaml
+++ b/client/k8s-service.yaml
@@ -2,11 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: clientservice
+  labels:
+    run: clientservice
 spec:
   type: NodePort
-  selector:
-    app: clientservice
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8081
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+    name: http
+  - port: 443
+    protocol: TCP
+    name: https
+  selector:
+    run: clientservice
+---
