--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,7 +15,11 @@ RUN npm run build
 
 FROM nginx:1.13.12-alpine
 
+RUN rm -rf /usr/share/nginx/html/*
+
 
 COPY --from=node /usr/src/app/dist/client /usr/share/nginx/html
 
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+#EXPOSE 8081
+
+COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
