--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.batch.initialize-schema=always
 ##Using MySQL database
 spring.datasource.url=jdbc:mysql://ecommerce-app-mysql/authdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=1234
 
 # ===============================
 # = JPA / HIBERNATE
