--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,13 +1,18 @@
-spring.datasource.url = jdbc:mysql://ecommerce-app-mysql/user?createDatabaseIfNotExist=true
+server.port=8091
+
+
+spring.batch.initialize-schema=always
+#=======================================
+##Using MySQL database
+spring.datasource.url=jdbc:mysql://ecommerce-app-mysql/user?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
-server.port=8091
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = update
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
 spring.jpa.show-sql=true
-spring.batch.job.enabled=false
-spring.batch.initialize-schema=ALWAYS
-
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
