--- a/client/k8s-service.yaml
+++ b/client/k8s-service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     run: clientservice
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 80
