--- a/client/k8s-secrets.yaml
+++ b/client/k8s-secrets.yaml
@@ -6,5 +6,5 @@ type: Opaque
 data:
   service-api-key: czVEVWFyVWwmYlRAWEcqTEtGTmkzVzI=
   mysql-root-password: cGFzc3dvcmQ=
-  timo: shiva
+  timo: cGFzc3dvcmQ=
 
